--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 <br />
 <br />
 <br />
-<br />
-<br />
-<br />
 <div class="width">Welcome to the home of all my GitHub projects on the web</div>
 <br />
 <br />
 <div class="width">Oops, things are still in a very great state of flux currently; check back soon for changes.</div>
 <br />
-<br />
-<br />
-<br />
+<script src='http://gitlive.com/githublive.min.js'></script>
+<script>var GithubPush = {num_old:5,nodes:['acommitteeoflunatics/kowm-core']}</script>
+<div id='commits'></div><br />
+<script src='http://gitlive.com/githublive.min.js'></script>
+<script>var GithubPush = {num_old:5,nodes:['acommitteeoflunatics/kowm-opts']}</script>
+<div id='commits'></div><br />
+<script src='http://gitlive.com/githublive.min.js'></script>
+<script>var GithubPush = {num_old:5,nodes:['acommitteeoflunatics/kowm-apps']}</script>
+<div id='commits'></div><br />
 <br />
 </p></center></div>
 <center><p class="footer"><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center></div>
