--- a/about.html
+++ b/about.html
@@ -22,6 +22,6 @@
 <a href="index.html">Back to the aCoL Home page</a>
 <br />
 </p></center></div>
-<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center></div>
+<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2009, 2010, 2011, 2012, 2013, Jerry W Jackson &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center></div>
 </body>
 </html>
