--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <center><p class="content">
+<div class="header"><img id="logo" src="images/logo.png" alt="a Committee of Lunatics"></div>
+<br />
+<br />
 <div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div>
 <div id="wrapper">
 <br />
