--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <head>
 <title>A Committee of Lunatics - Home</title>
-<style type="text/css" media="screen">@import "css/acol_base.css";</style>
+<style type="text/css" media="screen">@import "css/acol_dark.css";</style>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
 </head>
