--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>A Committee of Lunatics - Home</title>
-<style type="text/css" media="screen">@import "css/acol_dark.css";</style>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="Content-Language" content="en-us">
+<title>a Committee of Lunatics - Schade</title>
+<style type="text/css" media="screen">@import "css/acol_light.css";</style>
+<meta charset="utf-8">
 </head>
 <body>
-<center><p class="content">
 <div class="header"><img id="logo" src="images/logo.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div>
+<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
 <br />
 <br />
 <br />
-<div class="width">Welcome to the home of all my GitHub projects on the web</div>
+Welcome to my own visible piece of <i>a Committee of Lunatics</i>. This site is currently undergoing a massive refit so that timely information relating to various project will be easily accessible to all who desire it. We hope that you will enjoy your sojourn with us and return in the future when our latest project nears release.
 <br />
 <br />
-<div class="width">Oops, things are still in a very great state of flux currently; check back soon for changes.</div>
+Regardless of the ongoing sitewide changes, welcome to my little public piece of <i>a Committee of Lunatics</i>. 
 <br />
-<script src='http://gitlive.com/githublive.min.js'></script>
-<script>var GithubPush = {num_old:5,nodes:['acommitteeoflunatics/kowm-core']}</script>
-<div id='commits'></div><br />
-<script src='http://gitlive.com/githublive.min.js'></script>
-<script>var GithubPush = {num_old:5,nodes:['acommitteeoflunatics/kowm-opts']}</script>
-<div id='commits'></div><br />
-<script src='http://gitlive.com/githublive.min.js'></script>
-<script>var GithubPush = {num_old:5,nodes:['acommitteeoflunatics/kowm-apps']}</script>
-<div id='commits'></div><br />
 <br />
-</p></center></div>
-<center><p class="footer"><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2009, 2010, 2011,2012,2013 Jerry W Jackson&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center></div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<div class="breadcrumb">
+	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+</div>
+<br />
+</div>
+<div class="footer">
+	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3" height="32px" /></a>
+	<br />
+	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
+</div>
 </body>
 </html>
