--- a/404.html
+++ b/404.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>A Committee of Lunatics - 404 - Page Not Found</title>
-<style type="text/css" media="screen">@import "css/acol_base.css";</style>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="Content-Language" content="en-us">
+<title>a Committee of Lunatics - 404</title>
+<style type="text/css" media="screen">@import "css/acol_light.css";</style>
+<meta charset="utf-8">
 </head>
 <body>
-<center><p>
-<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div>
+<div class="header"><img id="logo" src="images/logo.png" alt="a Committee of Lunatics"></div>
+<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
 <br />
 <br />
@@ -28,8 +28,14 @@
 <iframe id="notfound_org" src="http://notfound-static.fwebservices.be/404/index.html?&amp;key=a76d9aab91a9ac5ab6897d098cfcce28" width="100%" height="650" frameborder="0"></iframe>
 <br />
 <br />
-</p></center></div>
-<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2009, 2010, 2011, 2012, 2013 Jerry W Jackson&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center>
-</center>
+<div class="footer">
+	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<br />
+	<br />
+	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
+	<br />
+	<br />
+	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3">
+</div>
 </body>
 </html>
