--- a/resume.html
+++ b/resume.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>a Committee of Lunatics - Contact</title>
+<title>a Committee of Lunatics - My R&eacute;sum&eacute;</title>
 <style type="text/css" media="screen">@import "css/acol_light.css";</style>
 <meta charset="utf-8">
 </head>
 <body>
 <div class="header"><img id="logo" src="images/logo.png" alt="a Committee of Lunatics"></div>
-<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div>
+<div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html" id="current">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
 <br />
 <br />
