--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,9 @@
 <div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
 <br />
 <br />
+<a href="https://coderwall.com/schade"><img alt="Endorse schade on Coderwall" src="http://api.coderwall.com/schade/endorsecount.png" /></a>
+<br />
+<br />
 <br />
 <div class="footer">
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
