--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,11 @@
 <br />
 <br />
 <br />
+<a href="https://coderwall.com/schade"><img alt="Endorse schade on Coderwall" src="http://api.coderwall.com/schade/endorsecount.png" /></a>
+<br />
+<br />
+<br />
+<br />
 <br />
 <div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
 <br />
