--- a/resume.html
+++ b/resume.html
@@ -12,10 +12,10 @@
 <div id="wrapper">
 <br />
 <br />
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
 <br />
 <br />
-<embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="820" height="2270"  type="application/pdf" style="color:black;">
+<embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="820" height="2270"  type="application/pdf" style="color:black;"></div>
 <br />
 <br />
 <div class="footer">
