--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,8 @@
 <div id="wrapper">
 <br />
 <br />
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address. If you'd like to save or print a copy of my resume, feel free to use the pdf toolbar at the bottom of the second page; note that you will have to have your mouse cursor over the resume itself before the toolbar becomes visible.
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address. 
+You'll need the acrobat reader plugin installed to view my r&eacute;sum&eacute; If you'd like to save or print a copy of my r&eacute;sum&eacute; and are using Chrome, you'll need to use the pdf toolbar at the bottom of the second page; note that you will have to have your mouse cursor over the r&eacute;sum&eacute; itself before the toolbar becomes visible.
 <br />
 <br />
 <embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="900" height="2320"  type="application/pdf" style="color:black;"></div>
