--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,13 @@
 <br />
 <br />
 <br />
+<ul>
+	<li style="list-style-type:none;"><a href="https://coderwall.com/schade"><img alt="Endorse schade on Coderwall" src="http://api.coderwall.com/schade/endorsecount.png" /><br />&nbsp;&nbsp;Coderwall</a></li>
+</ul>
 <br />
-<br />
-<a href="https://coderwall.com/schade"><img alt="Endorse schade on Coderwall" src="http://api.coderwall.com/schade/endorsecount.png" /><br />&nbsp;&nbsp;Coderwall</a>
-<br />
-<br />
-<a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/email.png" height="28" /></a>
-<a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/mail.png" height="32" /></a>
-<br />
+<ul>
+	<li style="list-style-type:none;"><a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/mail.png" height="32" /><br />&nbsp;&nbsp;Email</a></li>
+</ul>
 <br />
 <br />
 <div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.</div>
@@ -31,7 +30,7 @@
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br />
 	<br />
-<a href="index.html">click here to go back to my main page</a>
+	<a href="index.html">click here to go back to my main page</a>
 	<br />
 	<br />
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
